Compiles succesfully. Addition and resizing logic superficially tested

--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,9 @@
 *.app
 .vscode/settings.json
 .vscode/c_cpp_properties.json
+.vscode/tasks.json
+Building.h
+Utility.h
+lukasTestingMain.cpp
+test.txt
+GameEnvironment.txt
