--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,15 @@
 *.exe
 *.out
 *.app
+
+googletest/
+build/
+CMakeLists.txt
+Example.cpp
+Example.hpp
+test.txt
+GameEnvironment.txt
+lukasTestingMain.cpp
+unitTestingGE.cpp
+tasks.json
+ExampleTests.cpp
