--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -118,6 +118,9 @@
     "streambuf": "cpp",
     "thread": "cpp",
     "typeinfo": "cpp",
-    "variant": "cpp"
+    "variant": "cpp",
+    "charconv": "cpp",
+    "format": "cpp",
+    "span": "cpp"
   }
 }
